ext/wayland/wlwindow.c
@@ -332,6 +332,7 @@ gst_wl_window_update_borders (GstWlWindow * window)
   GstBuffer *buf;
   struct wl_buffer *wlbuf;
   GstWlBuffer *gwlbuf;
+  GstAllocator *alloc;
 
   if (window->no_border_update)
     return;
@@ -354,7 +355,9 @@ gst_wl_window_update_borders (GstWlWindow * window)
   /* draw the area_subsurface */
   gst_video_info_set_format (&info, format, width, height);
 
-  buf = gst_buffer_new_allocate (gst_wl_shm_allocator_get (), info.size, NULL);
+  alloc = gst_wl_shm_allocator_get ();
+
+  buf = gst_buffer_new_allocate (alloc, info.size, NULL);
   gst_buffer_memset (buf, 0, 0, info.size);
   wlbuf =
       gst_wl_shm_memory_construct_wl_buffer (gst_buffer_peek_memory (buf, 0),
@@ -365,6 +368,7 @@ gst_wl_window_update_borders (GstWlWindow * window)
   /* at this point, the GstWlBuffer keeps the buffer
    * alive and will free it on wl_buffer::release */
   gst_buffer_unref (buf);
+  g_object_unref (alloc);
 }
 
 void
